cluster/adguard/kustomize/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome
spec:
  template:
    spec:
      containers:
      - name: adguardhome
        volumeMounts:
        - name: certs
          mountPath: /opt/adguardhome/ssl
          readOnly: true
      - name: querylog-retention
        image: busybox:1.36
        imagePullPolicy: IfNotPresent
        command:
        - /bin/sh
        - -c
        - |
          [...]
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 5m
            memory: 8Mi
          limits:
            cpu: 50m
            memory: 32Mi
        volumeMounts:
        - name: work
          mountPath: /opt/adguardhome/work
      volumes:
      - name: conf-ro
        configMap:
          name: adguardhome-config
      - name: certs
        secret:
          secretName: 0xamit-com-tls
